Fix positioning for portfolio images and labels
- Labels can also be referred to as names for each picture
- Biggest edit was to change the column/grid size from md to lg
  since that dictates the minimum container's width and a md's
  container was limited to 768 which wasn't enough for my pictures
  each at 325px
- The option of using a smaller size for the pictures were tested
  and they helped with the issue of the image clipping over the
  container, but they then looked too small to appreciate and
  left too much whitespace
- The names were also added to lay on top of the text as previously
  intended
- The biggest change for the name or portfolio-text was to give it
  a display property of inline-block in order to have it centered
  within the div

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,7 +173,7 @@ h3.connect-header {
 
 .portfolio-img {
   /* Positioning */
-  height: 300px;
+  width: 325px;
 
   /* Border */
   border: solid 1px #dbdbdb;
@@ -183,10 +183,12 @@ h3.connect-header {
   /* Positioning */
   position: relative;
   text-align: center;
-  width: 298px;
-  height: 50px;
+  display: inline-block;
   top: -75px;
-  left: 1px;
+
+  /* Sizing */
+  width: 325px;
+  height: 50px;
 
   /* Color */
   background-color: #4aaaa5;
@@ -201,8 +203,9 @@ h3.connect-header {
 }
 
 .portfolio-img-container {
-  position: relative;
+  /* position: relative; */
   padding: 20px;
+
 }
 
 /* --------PORTFOLIO PAGE END-------- */
